# AppAgent-Claw

./: .gitignore  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
examples/recordings/20260414_213559_notes-create-new-note-with-text/: flow.json
examples/recordings/20260414_213855_safari-new-tab-search-keyword/: flow.json
examples/recordings/20260414_214025_netease-play-daily-recommendation/: flow.json
examples/recordings/20260414_214208_netease-play-favorite-songs/: flow.json
scripts/: annotation.py  capture.py  executor.py  focused_text.py  package_release_skills.py  record.py  record_overlay.swift  recorder.py  replay.py  replay_overlay.swift  resolver.py  schema.py  setup_env.sh  storage.py  window_context.py
tests/: test_annotation.py  test_capture.py  test_executor.py  test_record_cli.py  test_recorder.py  test_replay.py  test_resolver.py  test_schema.py  test_storage.py  test_window_context.py
